# gnunet

./: .gitignore  TAGS  configure.ac  vc.json  x86_64-aarch64-linux-android.txt
debian/: changelog
po/: POTFILES.in
src/: Makefile.am
src/cadet/: Makefile.am  test_cadeT.c  test_cadeT_util.c  test_cadeT_util.h
src/did/: test_w3c_ed25519_2020.c
src/dns/: dns.conf.in  gnunet-service-dns.c
src/escrow/: .gitignore  Makefile.am  escrow.h  escrow_api.c  escrow_plugin_helper.c  escrow_plugin_helper.h  gnunet-escrow  gnunet-escrow.c  plugin_escrow_anastasis.c  plugin_escrow_gns.c  plugin_escrow_plaintext.c  plugin_gnsrecord_escrow.c  plugin_rest_escrow.c  test_escrow.sh  test_gns_escrow.sh  test_plaintext_escrow.sh
src/exit/: exit.conf  gnunet-daemon-exit.c
src/gnsrecord/: gnunet-gnsrecord-tvg
src/include/: gnunet_core_service.h  gnunet_core_underlay.h  gnunet_crypto_lib.h  gnunet_escrow_lib.h  gnunet_escrow_plugin.h  gnunet_gnsrecord_lib.h  gnunet_os_lib.h  gnunet_pils_service.h  gnunet_protocols.h  gnunet_reclaim_lib.h  gnunet_reclaim_plugin.h  gnunet_strings_lib.h  gnunet_testing_core_lib.h
src/lib/testing/: unshare.out
src/lib/util/: crypto_ecc_setup.c  dnsparser.c  program.c  service.c
src/multicast/: Makefile.am  gnunet-multicast.c  gnunet-service-multicast.c  multicast.conf.in  test_multicast.c  test_multicast_2peers.c  test_multicast_multipeer.c
src/nat/: gnunet-service-nat_helper.c  gnunet-service-nat_helper.h  nat.conf.in
src/reclaim/: Makefile.am  gnunet-reclaim.c  gnunet-service-reclaim_tickets.c  libgnunet_reclaim_vc_crypto.c  libgnunet_reclaim_vc_crypto.h  pabc_helper.c  pabc_helper.h  plugin_reclaim_credential_jwt.c  plugin_reclaim_credential_pabc.c  plugin_reclaim_credential_vc.c  plugin_reclaim_escrow_attributes_plaintext.c  plugin_reclaim_escrow_key_anastasis.c  plugin_reclaim_escrow_key_gns.c  plugin_reclaim_escrow_key_plaintext.c  plugin_reclaim_vc_embedded_proof.c  plugin_reclaim_vc_embedded_proof.h  plugin_reclaim_w3c_verifiable_credential.c  plugin_rest_pabc.c  plugin_rest_reclaim.c  reclaim_credential.c  reclaim_vc_embedded_proof.h  test_reclaim_vc.sh  vc_crypto.c  vc_crypto.h
src/revocation/: gnunet-revocation-tvg
src/service/: Makefile.am
src/service/core/: Makefile.am  core_api.c  gnunet-service-core_kx.c  gnunet_core_underlay_dummy.c  gnunet_core_underlay_dummy.h  test_core_basic.sh  test_core_plugin_basic.c  test_core_plugin_underlay_dummy.c  test_core_underlay_dummy.c  test_core_underlay_dummy_single.c  test_core_underlay_dummy_single_0.sh  test_core_underlay_dummy_single_1.sh  test_core_underlay_dummy_testing.c  test_core_underlay_dummy_testing.sh  test_core_underlay_dummy_testing_launcher.c  testing_core_cmd_connect.c  testing_core_cmd_recv.c  testing_core_cmd_send.c
src/service/pils/: Makefile.am  gnunet-service-pils.c  pils.conf.in  pils.h  pils_api.c  test_pils_api.c
src/service/reclaim/: gnunet-service-reclaim_tickets.c
src/service/testbed/: list-keys
src/service/transport/: Makefile.am  gnunet-communicator-udp.c  gnunet-service-transport.c  meson.build  test_communicator_backchannel-udp  test_communicator_bidirect-tcp
src/setu/: Makefile.am  gnunet-service-setu.c  perf_setu_api.c
src/testbed/: Makefile.am  testbed_api_underlay.c
src/util/: crypto_ecc.c  os_installation.c  strings.c  test_strings.c
src/vpn/: gnunet-service-vpn.c  vpn.conf.in
